--- a/templates/components/SearchRoom.html.twig
+++ b/templates/components/SearchRoom.html.twig
@@ -1,57 +1,189 @@
+<div class="row room__filter" {{ attributes }} >
+	<div class="col-12 col-lg-3 shadow p-3 mb-5 bg-body-tertiary rounded">
+		<h5 class="text-center">Filtrer ma recherche</h5>
 
-    <div {{ attributes }} class="col-12 col-lg-9 room__filter--results"> 
-        <div class="room__filter--search">
-            <div class="d-flex">
-                <input type="text" data-model="query" name="" id="" placeholder="Votre recherche ">
-            </div>
-            {# <p>Résultats : {{ rooms|length }}</p> #} 
-        </div>
+		<form action="" method="get" class="room__filter--form">
+			<div class="room__filter--group">
+				<label for="">Date d'entrée</label>
+				<input type="date" name="">
+			</div>
+			<div class="room__filter--group">
+				<label for="">Date de sortie</label>
+				<input type="date" name="">
+			</div>
+			<div class="button">
+				<button type="submit" class="btn btn-warning">
+					<i class="bi bi-search"></i>
+				</button>
+			</div>
+		</form>
 
-        {% set rooms = this.Rooms %}
-        {% for item in rooms %}
-            <a href="{{ path('app_room_show', { 'id': item.id }) }}">
-                <div class="room__filter--card">
-                    {% set image_url = (item.image|slice(0, 4) == 'http') ? item.image : 'images/' ~ item.image %}
-                    <img src="{{ asset(image_url) }}" alt="{{ item.title }}">
-                    <div class="room__filter--content">
-                        <div class="room__filter--text">
-                            <div class="d-flex justify-content-between">
-                                <h5>{{ item.title }}</h5>
-                                <p class="m-0 p-0"><i>{{ item.city }}</i></p>
-                            </div>
-                            <div class="d-none d-xl-inline-flex d-flex justify-content-between">
-                                {% if item.ergonomic is not empty %}
-                                <p>
-                                    <i class="bi bi-building"></i>
-                                    Ergonomie :
-                                    <br>{{ item.ergonomic[0] }} ...
-                                </p>
-                                {% endif %}
-                                {% if item.equipment is not empty %}
-                                <p>
-                                    <i class="bi bi-lightbulb"></i>
-                                    Equipement :
-                                    <br>{{ item.equipment[0] }} ...
-                                </p>
-                                {% endif %}
-                                <p>
-                                    <i>{{ item.capacityMin }}
-                                        <i class="bi bi-people"></i> -
-                                        {{ item.capacityMax }}
-                                        <i class="bi bi-people"></i>
-                                    </i>
-                                </p>
-                            </div>
-                        </div>
-                        <p class="w-20">
-                            <span>{{ item.price }} €</span><br>/jour
-                        </p>
-                    </div>
-                </div>
-            </a>
-			   
-        {% endfor %}
-        
-           {#{ pagerfanta(rooms) }#}
-    </div>
+		<div class="accordion" id="accordionFilter">
+			<div class="accordion-item">
+				<h2 class="accordion-header">
+					<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+						Par capacité
+					</button>
+				</h2>
+				<div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionFilter">
+					<div class="accordion-body">
+                        <input type="text" min="30" data-model="capacityMin" name="" id="" placeholder="30">
+                        <input type="text" data-model="capacityMax" name="" id="" placeholder="450">
+
+						{# <form action="" method="get" class="room__filter--form">
+							<div class="room__filter--group">
+								<label for="">Min</label>
+								<input type="text" name="">
+							</div>
+							<div class="room__filter--group">
+								<label for="">Max</label>
+								<input type="text" name="">
+							</div>
+							<div class="button">
+								<button type="submit" class="btn btn-warning">
+									<i class="bi bi-search"></i>
+								</button>
+							</div>
+						</form> #}
+					</div>
+				</div>
+			</div>
+			<div class="accordion-item">
+				<h2 class="accordion-header">
+					<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+						Par ville:
+					</button>
+				</h2>
+				<div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFilter">
+					<div class="accordion-body">
+                        <input type="text" data-model="city" name="" id="" placeholder="Paris ">
+						{# <form action="{{ path('app_room')}}" method="get" class="room__filter--form">
+							<div class="room__filter--group">
+								<label for="city">Ville</label>
+								<input type="text" name="city" placeholder="Paris">
+							</div>
+							<div class="button">
+								<button type="submit" class="btn btn-warning">
+									<i class="bi bi-search"></i>
+								</button>
+							</div>
+						</form> #}
+					</div>
+				</div>
+			</div>
+			<div class="accordion-item">
+				<h2 class="accordion-header">
+					<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+						Ergonomie & Equipements
+					</button>
+				</h2>
+				<div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFilter">
+					<div class="accordion-body">
+						<form action="" method="get" class="room__filter--form">
+							<div class="room__filter--group">
+								<h6>Ergonomie</h6>
+								<div class="form-check">
+									<input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+									<label class="form-check-label" for="flexCheckDefault">
+										Default checkbox
+									</label>
+								</div>
+								<div class="form-check">
+									<input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
+									<label class="form-check-label" for="flexCheckChecked">
+										Checked checkbox
+									</label>
+								</div>
+							</div>
+							<div class="room__filter--group">
+								<h6>Equipement</h6>
+								<div class="form-check">
+									<input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+									<label class="form-check-label" for="flexCheckDefault">
+										Default checkbox
+									</label>
+								</div>
+								<div class="form-check">
+									<input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
+									<label class="form-check-label" for="flexCheckChecked">
+										Checked checkbox
+									</label>
+								</div>
+							</div>
+							<div class="button">
+								<button type="submit" class="btn btn-warning">
+									<i class="bi bi-search"></i>
+								</button>
+							</div>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+
+
+	</div>
+
+	<div class="col-12 col-lg-9 room__filter--results">
+		<div class="room__filter--search">
+			<input type="text" data-model="query" name="" id="" placeholder="Votre recherche ">
+			{# <p>Résultat:
+				{{ this.Rooms ? this.Rooms|length : "0" }}</p> #}
+
+			{# <p>Résultats : {{ rooms|length }}</p> #}
+		</div>
+
+		{% set rooms = this.Rooms %}
+		{% for item in rooms %}
+			<a href="{{ path('app_room_show', { 'id': item.id }) }}">
+				<div class="room__filter--card">
+					{% set image_url = (item.image|slice(0, 4) == 'http') ? item.image : 'images/' ~ item.image %}
+					<img src="{{ asset(image_url) }}" alt="{{ item.title }}">
+					<div class="room__filter--content">
+						<div class="room__filter--text">
+							<div class="d-flex justify-content-between">
+								<h5>{{ item.title }}</h5>
+								<p class="m-0 p-0">
+									<i>{{ item.city }}</i>
+								</p>
+							</div>
+							<div class="d-none d-xl-inline-flex d-flex justify-content-between">
+								{% if item.ergonomic is not empty %}
+									<p>
+										<i class="bi bi-building"></i>
+										Ergonomie :
+										<br>{{ item.ergonomic[0] }}
+										...
+									</p>
+								{% endif %}
+								{% if item.equipment is not empty %}
+									<p>
+										<i class="bi bi-lightbulb"></i>
+										Equipement :
+										<br>{{ item.equipment[0] }}
+										...
+									</p>
+								{% endif %}
+								<p>
+									<i>{{ item.capacityMin }}
+										<i class="bi bi-people"></i>
+										-
+										{{ item.capacityMax }}
+										<i class="bi bi-people"></i>
+									</i>
+								</p>
+							</div>
+						</div>
+						<p class="w-20">
+							<span>{{ item.price }}
+								€</span><br>/jour
+						</p>
+					</div>
+				</div>
+			</a>
+
+		{% endfor %}
+
+		{#{ pagerfanta(rooms) }#}
+	</div>
 </div>
