--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -20,12 +20,17 @@
     <label for="inputPassword">Password</label>
     <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
 
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
+    <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
-    <button class="btn btn-lg btn-primary" type="submit">
+    <button class="btn btn-lg btn-primary mt-3" type="submit">
         Sign in
     </button>
 </form>
+
+<div class="mt-3">
+    <a href="{{ path('connect_google_start') }}" class="btn btn-light border d-flex align-items-center justify-content-center">
+        <img src="{{ asset('images/gmail.png') }}" alt="Google logo" height="20" class="me-2">
+        Register with Gmail
+    </a>
+</div>
 {% endblock %}
