--- a/templates/components/FrontNavbar.html.twig
+++ b/templates/components/FrontNavbar.html.twig
@@ -4,7 +4,7 @@
 			<a href="{{ path('app_home')}}" class="nav__container--logo">EventRoom</a>
 			<ul>
                 {% if app.user %}
-					<a href="{{ path('app_profile') }}" class="nav__container--link">
+					<a href="{{ path('app_profile_index') }}" class="nav__container--link">
 						<li class="nav__container--li"><i class="bi bi-person-bounding-box"></i> <span> Mon compte</span></li>
 					</a>
 				{% endif %}
