--- a/templates/profile/booking.html.twig
+++ b/templates/profile/booking.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}EventRoom : Mon profil
+{% block title %}EventRoom : Mes réservations
 {% endblock %}
 
 {% block body %}
