contenu page profile et notifications

--- a/assets/styles/sass/style.css
+++ b/assets/styles/sass/style.css
@@ -382,6 +382,7 @@ header .nav__container a li {
   display: flex;
   align-items: center;
   justify-content: space-around;
+  gap: 15px;
 }
 .profile__menu--head img {
   width: 100px;
@@ -408,10 +409,37 @@ header .nav__container a li {
 .profile__menu--list li:hover {
   border-bottom: #7BBCB0 1px solid;
 }
+.profile__content {
+  width: 100%;
+  padding: 50px;
+}
+.profile__content ul {
+  padding: 0;
+  width: 100%;
+}
+.profile__content ul li {
+  list-style: none;
+  padding: 5px 10px;
+  display: flex;
+  gap: 8px;
+}
+.profile__content ul li img {
+  width: 60px;
+  height: 60px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.profile__content--notification img {
+  width: 150px;
+  height: 150px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
 @media (min-width: 768px) {
   .profile__menu {
     width: 25%;
     flex-direction: column;
+    justify-content: start;
     gap: 50px;
   }
   .profile__menu--head {
@@ -421,5 +449,8 @@ header .nav__container a li {
   }
   .profile__menu--list {
     font-size: large;
+  }
+  .profile__content {
+    width: 75%;
   }
 }/*# sourceMappingURL=style.css.map */
