--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -61,8 +61,12 @@
 						<a href="{{ path('app_room_show', { 'id': room.id }) }}">
 							<div class="card">
 								
-								{% set image_url = (room.image|slice(0, 4) == 'http') ? room.image : 'images/' ~ room.image %}
-								<img src="{{ image_url }}" alt="Room Image" class="card-img-top">
+							 {% if room.getFirstImage() is not null %}
+                        <img src="{{ vich_uploader_asset(room.getFirstImage(), 'imageFile') }}" alt="Room Image" class="w-full h-36 object-cover">
+                        {% else %}
+                        <img src="{{ asset('images/website/hero.jpg') }}" alt="Produit Image Par Défaut" class="w-full h-36 object-cover">
+                        {% endif %}
+
 								<div class="card-body">
 									<h5 class="card-title">{{ room.title }}</h5>
 									<p><i>{{ room.city }}</i></p>
