--- a/templates/profile/booking.html.twig
+++ b/templates/profile/booking.html.twig
@@ -6,6 +6,21 @@
 {% block body %}
 	<main class="profile">
 		{{ include('./components/partials/profileMenu.html.twig') }}
-		<div class="profile__content"></div>
+		<div class="profile__content">
+			<h1 class="text-center w-100">Mes Réservations</h1>
+			<div class="row">
+			{% for reservation in reservations %}
+			{# <div class="col-12 col-lg-6 p-2 profile__content--notification">
+				<div class="border rounded d-flex gap-1">
+					<img src="{{ asset(reservation.bookingId.roomId.image) }}" alt="Image de la salle">
+                    <div class="my-auto p-2">
+						<h6>{{ reservation.title }}</h6>
+						<p>{{ reservation.content }}</p>         
+					</div>
+                </div>
+			</div> #}
+			{% endfor %}
+			</div>
+		</div>
 	</main>
 {% endblock %}
